@startuml
class HumanInputObserver {
    - Start() : void
    - FixedUpdate() : void
    - OnDisable() : void
    + Dispose() : void
    - OnSetGameMode(id:int, input:GameplayGlobals.Input, severity:GameplayGlobals.Severity) : void
    - OnRestart() : void
}
class "CSVLogger`1"<T> {
}
class HumanInputRecord {
    + mouseX : float <<get>> <<set>>
    + mouseY : float <<get>> <<set>>
    + keyCodes : string <<get>>
}
MonoBehaviour <|-- HumanInputObserver
IDisposable <|-- HumanInputObserver
HumanInputObserver --> "_csvLogger<HumanInputRecord>" "CSVLogger`1"
HumanInputObserver --> "_restartAction" InputAction
HumanInputObserver +-- HumanInputRecord
BaseRecord <|-- HumanInputRecord
@enduml
